--- a/.gitignore
+++ b/.gitignore
@@ -32,12 +32,6 @@ MANIFEST
 *.manifest
 *.spec
 
-# images
-*.jpg
-*.png
-*.jpeg
-*.JPEG 
-
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -52,6 +46,7 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
 cover/
